2005-12-05 [colin]	1.9.100cvs68

	* po/POTFILES.in
		Fix make release ;-)

2005-12-05 [colin]	1.9.100cvs67

	* src/compose.c
	* src/compose.h
		Fix cursor positioning (not obeying %X)

2005-12-05 [paul]	1.9.100cvs66

	* src/plugins/dillo_viewer/dillo_prefs.c
		fix compilation warning

2005-12-05 [paul]	1.9.100cvs65

	* src/prefs_spelling.c
	* src/plugins/trayicon/trayicon.c
		cleanups - remove unused stuff

2005-12-05 [paul]	1.9.100cvs64

	* README
	* manual/plugins.xml
		remove info about removed mathml_viewer plugin

2005-12-05 [paul]	1.9.100cvs63

	* configure.ac
	* src/plugins/Makefile.am
	* src/plugins/mathml_viewer/.cvsignore
	* src/plugins/mathml_viewer/Makefile.am
	* src/plugins/mathml_viewer/mathml_viewer.c
		remove unmaintained mathml_viewer plugin

2005-12-05 [paul]	1.9.100cvs62

	* src/summaryview.c
		obey prefs_common.always_show_msg when
		moving a msg
		Thanks to Colin

2005-12-05 [paul]	1.9.100cvs61

	* src/compose.c
	* src/prefs_account.c
	* src/prefs_filtering.c
	* src/prefs_quote.c
	* src/prefs_spelling.c
	* src/prefs_toolbar.c
	* src/summaryview.c
	* src/gtk/gtkutils.c
	* src/gtk/quicksearch.c
	* src/plugins/dillo_viewer/dillo_prefs.c
		dialog cleanups

2005-12-04 [paul]	1.9.100cvs60

	* src/inc.c
	* src/prefs_account.c
	* src/prefs_account.h
		allow a Local account to specify a
		default inbox
		(closes bug 843 'Inbox cannot be changed for local
		 mailboxes')

2005-12-04 [colin]	1.9.100cvs59

	* src/plugins/trayicon/trayicon.c
		Remove Get, rename Get All to Get Mail in order to
		be consistent with the default main toolbar

2005-12-03 [colin]	1.9.100cvs58

	* manual/gpl.xml
	* manual/sylpheed-claws-manual.xml
		Add GPL appendix

2005-12-03 [paul]	1.9.100cvs57

	* AUTHORS
	* po/sv.po
	* src/gtk/authors.h
		new (partially complete) Swedish translation
		by Anders Troback <sylpheed@troback.com>

2005-12-02 [paul]	1.9.100cvs56

	* configure.ac
		libetpan 0.41 required

2005-12-02 [paul]	1.9.100cvs55

	* src/plugins/clamav/clamav_plugin.c