@@ -1,3 +1,10 @@
+2005-12-06 [paul]	1.9.100cvs69
+
+	* src/plugins/clamav/clamav_plugin_gtk.c
+		add another tooltip
+	* src/plugins/spamassassin/spamassassin_gtk.c
+		rework spamassassin_create_widget_func()
+
 2005-12-05 [colin]	1.9.100cvs68
 
 	* po/POTFILES.in
